# savh_print_app

./: .env.example  .env.example.windows  .gitignore  DEV.md  README.md  pyproject.toml
monitoring/: docker-compose.yml  prometheus.yml
monitoring/grafana/dashboards/: README.md  SAVH Impresiones-1771470652171.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
scripts/: init_db.sql  nssm_install.bat  savh.cmd  savh.ps1  savh.sh
scripts/helpers/: logs.ps1  paths.ps1  process.ps1
scripts/windows/: nssm_install.bat  savh.cmd  savh.ps1
scripts/wsl/systemd/: savh-api.service  savh-worker-generate.service  savh-worker-print.service
src/create_prints_server/app/: api.py  generator.py
src/create_prints_server/config/: settings.py
src/create_prints_server/domain/: guides.py  money.py  orders.py
src/create_prints_server/infra/: documents_provider.py  google_sheets.py  logging.py
src/create_prints_server/render/: guides_pdf.py  shipping_pdf.py
src/create_prints_server/utils/: dates.py
src/create_prints_server/worker/: __init__.py  generate_worker.py
src/print_server/app/: api.py  main.py
src/print_server/config/: settings.py
src/print_server/infra/: __init__.py  logging.py  printer.py
src/print_server/worker/: print_worker.py
src/printing_queue/: __init__.py  db.py  models.py  settings.py
src/printing_queue/config/: __init__.py  settings.py
src/printing_queue/infra/: __init__.py  db.py  job_status_events.py  models.py  observability.py
static/css/: main.css
static/js/: main.js
templates/: index.html
tests/: conftest.py
tests/create_prints_server/: test_api.py  test_documents_provider.py  test_generator.py  test_guides_pdf.py
